--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ font-size: 30px;
      margin-top: -40px;
      display: flex;
  }
-  p {
+  h3 {
     color: rgb(240,149,75);
     font-size: 20px;
  }
@@ -49,7 +49,7 @@ font-size: 30px;
      padding: 10px;
      width: 180px;
      border-radius: 5px;
-     margin-top: 20px;
+     margin-top: 10px;
      font-size: 20px;
      border: none;
  }
@@ -60,44 +60,58 @@ font-size: 30px;
  }
  .col-1 h5{
      font-size: 20px;
-     color: #7e809f;
+     color: #8c90ab;
      line-height: 25px;
  }
 .col-2{
-    margin-left: 120px;
+    margin-left: 150px;
     border: solid 2px rgb(207,228,231);
-    width: 500px;
+    width: 450px;
     border-radius: 50%;
     border-width: 80px;
-    height: 500px;
+    height: 450px;
 }
-
- .heading1 ,.heading2{
+.col-2 img{
+    margin-top: -80px;
+    padding-left: 10px;
+    margin-left: 15px;
+}
+ .heading1 {
+    display: flex;
+    padding:70px;
+    height: 60px;
+ }
+ .heading2{
      display: flex;
     padding:70px;
-    height: 50px;
+    height: 100px;
  }   
  
  .heading1 p{
      margin-left: 350px;
      line-height:30px ;
      padding-top: -20px;
-     color: #a4a6bc;   
+     color: #8c90ab; 
+     font-size: 18px;  
  }
 .heading2 p {
-    color: #a4a6bc; 
+    font-size: 18px;
+    color: #8c90ab; 
     margin-left: 350px;
     line-height:30px ;
-    padding-top: 20px
+    padding-top: 70px;
+    
   
 }
  .heading2 h1{
-     margin-top: 50px;
+     margin-top: 90px;
      font-size: 40px;
+     color: #000;
  } 
  .heading1 h1{
      margin-top: 30px;
      font-size: 40px;
+     color: #000;
  }
  .sec-2{
      width: 100%;
@@ -105,34 +119,28 @@ font-size: 30px;
      background-color: rgb(248,254,255);
  }
  img{
-     margin-left: 50px;
+     margin-left: 80px;
+   
  }
-/* .services-1row{
-    display: flex;
-    margin: 90px;
-    
-}
-.services-2row{
-    display: flex;
-    margin-left: 70px;
-}
-.services-1row div , .services-2row div{
-    background-color: #ffff;
-    padding:40px ;
-}
-.services-1row p, .services-2row p{
-       font-size: 18px; */
-
 .cards-1, .cards-2{
     display: flex;
+    padding: 20px;
+}
+.cards-2{
+    margin-top: -40px;
+    
 }
 .column{
-     background-color: #ffff;
+     background-color: #ffffff;
     margin:50px;
-    padding: 50px;
+    padding: 25px;
+    box-shadow: #8c90ab;
+
 }
 .column p{
-font-size: 16px;
+font-size: 17px;
+color: #8c90ab;
+
 }
 
 .content1{
@@ -143,13 +151,197 @@ font-size: 16px;
 .side-section {
 padding: 40px;
 }
+.side-section p{
+    font-size: 18px;
+    color: #8c90ab;
+}
 .image1{
     background-color: #cfe4e7;
     margin:50px;
     border-radius: 15px;
 }
+.window i,.ambulence i, .Dental i, .medkit i,.paw i,.building i {
+    
+    padding:20px;
+    border-radius: 50%;
+    color:rgb(26,160,171);
+    background-color:   rgb(233,250,252);;
+      
+}
 .sec-3{
     height: 800px;
     background-color: rgb(248,254,255);
 }
+.comments{
+    display: flex;
+    margin-top: 40px;
+    text-align: justify;
+}
+.col-3{
+    margin-right: 5px;
+    background-color: #ffff;
+    width:50% ; 
+    padding:50px; 
+}
+.col-4{
+    background-color: #ffff;
+    width: 50%;
+    margin-left: 5px;
+    padding: 50px;
+
+}
+.comments1{
+    display: flex;
+    margin-bottom: -40px;
+}
+.comments1 h4{
+margin-top: 40px;
+}
+
+.col-3 p,.col-4 p{
+    margin: 50px 0 0 70px;
+    line-height: 25px;
+    color:#8c90ab; 
+    font-size: 20px;
+}
+.col-3 h2,.col-4 h2{
+    margin:10px 0 -30px 70px;
+    font-size: 25px;
+}
+.col-3 img,.col-4 img{
+border-radius: 50%;
+margin-left: 45px;
+padding: 20px;
+
+} 
+.image-box{
+  background-color: #f8feff;
+  height: 1500px;
+  width: 100%;
+  margin-top: -20px;
+  
+}
+.image-box h1{
+    margin:50px ;
+    padding: 60px -90px;
+}
+.inner-box{
+    margin: 40px;
+    padding-left: 40px;
+}
+.cards-3{
+    display:flex;
+}
+#img-1, #img-2, #img-3{
+    margin: 40px;  
+    border-radius: 10px; 
+}
+#img-1{
+    background-color: #f4f0fd;
+}
+#img-2{
+    background-color: #e3fcfd;
+}
+#img-3{
+   background-color: #f4f0fd;
+}
+.heading3{
+    display: flex;
+}
+
+
+.description{
+margin-left: 70px;
+padding-top: -90px;
+}
+.subscribe-section{
+margin: 125px 140px;
+min-height: 350px;
+width: 80%;
+align-items: center;
+background-color: #e9fafc;
+border-radius: 10px;
+padding-bottom: 40px;
+
+
+}
+.dot{
+    color: rgb(26,160,171);
+}
+.subscribe-2 h1{
+   padding: 100px 250px;
+}
+.subscribe-1 h3{
+    margin-top: 40px;
+    color: #8c90ab;
+}
+.subscribe-1{
+    display: flex;
+    background-color: #ffff;
+    margin: -120px 100px;
+    width: 700px;
+    padding-bottom: 20px ;
+    border-radius: 10px;
+}
+#btn-1{
+    margin-left: 250px;
+    padding-top: -20px;
+    width: 160px;
+    height: 90px;
+    font-weight: 600px;
+   
+}
+
+
+.subscription-1{
+    background-color: #f8feff;
+    /* min-height: 100vh; */
+    margin-top: -120px;
+    padding-top: 50px;
+}
+.subscribe-1 h3{
+    padding: 10px;
+}
+.footer-content{
+    display:flex;
+}
+.footer-content div{
+margin: 50px;
+}
+.footer-content ul li{
+    list-style: none;
+    padding: 5px;
+}
+
+.dot2{
+    color:rgb(240,149,75);
+}
+.star-icon{
+    margin: 25px 0 0 20px ;
+    padding: 20px;
+    
+}
+.star-icon i{
+    padding-left: 20px;
+    color: rgb(255, 166, 0);
+}
+.col-3 i, .col-4 i{
+    width: 20px;
+}
+.icons i{
+padding: 8px;
+
+}
+.columns i{
+backgroundcolor: rgb(26,160,171);
+}
+.col-1 i{
+    color: rgb(26,160,171) ;
+    font-size: 30px;
+    padding: 20px;
+}
+.quote-left i{
+    font-size: 30px;
+}
+
 
